# fastmap

./: .gitignore  LICENSE.txt  README.md  TODO.md  pyproject.toml  release.sh  setup.py
.github/workflows/: black.yml  release.yml  test.yml
examples/: README.md  example.py  minimap.py
experiments/: _qap.py  _swap_fw.py  randomXYgreedy.h
experiments/lap/: lap.h
experiments/lap_gccve/: lap.h  vector.h
experiments/swap/: queue.h  swapbb.h
experiments/vectors/: main.c
fastmap/: __init__.py  _wrapper.py  agreement_index.c  bfcm.c  diversity_index.c  greedy_2kKemenys_summed.c  greedy_kKemenys_divk_summed.c  greedy_kkemenys_summed.c  greedy_kmeans_summed.c  isomorphic.py  kemeny.py  kemeny_ranking.c  local_search_kkemeny.c  local_search_kkemeny_single_k.c  module.c  polarization_1by2Kemenys.c  polarization_index.c  proto.py  pyhamm.c  pykemeny.c  pypairwise.c  pyspear.c  pyswap.c  swap_distance_between_potes.c  wrapper.py
fastmap/bap/: bap.h  bap_bf.h  bap_cd.h
fastmap/bfcm/: bfcm.cpp
fastmap/cpuid/: cpuid.h
fastmap/example/: example_setup.py  fastwrapper.py  pyext.c  pyhamm.c  pyspear.c  pyswap.c  spear.h  wrapper.py
fastmap/experiments/: isomorphic.py
fastmap/fast/: bfcm.cpp  module.cpp
fastmap/kkemeny/: data_sets_generator.py  kemeny  kemeny.c  kemeny.h  kemeny.py  kemeny_test  kemeny_test.c  local_search_kkemeny_single_k.c  tests.ipynb  (+4 more)
tests/: README.md  exp.py  experiments.py  kemeny_tests.py  minimap.py  perftest_pair.py  perftest_spear.py  perftest_swap.py  test.py  test_wrap.py  testbap.py  testhamm.py  testpair.py  testspear.py  testswap.py
(+44 files in other folders)
