[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-map"
version = "0.0.1"
authors = [
  { name="Bartosz Hanc", email="bartosz.hanc02@gmail.com" }, ] 
description = "Optimized implementations of algorithms computing distance measures for Maps of Elections."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License"
      ]
dependencies=["numpy", "tqdm", "scipy", "mapel", "cvxpy"]
